--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <header>
         <div class="logo">
             <img src="img/britishrail.svg" alt="" width="72">
-            <h1>Train Guy</h1>
+            <h1 style="margin-right:200px;">Train Guy</h1>
+            
+            <script data-cfasync="false" type="text/javascript" src="https://www.linkonclick.com/a/display.php?r=3463475"></script>
         </div>
     </header>
 
@@ -819,6 +821,8 @@
             <img src="img/tg.png" width="50" height="50" alt="Train Guy">
             <p>Aheryeah</p>
         </button>
+        
+        <script data-cfasync="false" type="text/javascript" src="https://www.linkonclick.com/a/display.php?r=3463475"></script>
     </main>
 
     <footer>
@@ -945,7 +949,8 @@
             <div class="logo">
                 <img src="img/britishrail.svg" alt="" width="72">
                 <h1>Train Guy</h1>
-            </div>
+            </div><br/>
+                <script data-cfasync="false" type="text/javascript" src="https://www.linkonclick.com/a/display.php?r=3163279"></script>
         </div>
     </footer>
 
