--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
 			var url_string =  window.location.href;
 			var url = new URL(url_string);
 			var c = url.searchParams.get("f");
-			playAudio('mp3/'+c+'.mp3');
+			//playAudio('mp3/'+c+'.mp3');
 			
 			 
 			
