--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <meta property="og:title" content="Train Guy" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="" />
-    <meta property="og:image" content="img/soc.png" />
-
+    <meta property="og:image" content="https://trainguy.co.uk/img/soc.png" />
+ 
+	<meta property="og:image:width" content="1034" />
+	<meta property="og:image:height" content="556" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:image" content="https://trainguy.co.uk/img/soc.png" />
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Google Tag Manager -->
