--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
 
 
 </script>
-
+<script data-ad-client="ca-pub-7598064367335671" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 
 </html>
