Train Guy ...Belgian Loffles

--- a/index.html
+++ b/index.html
@@ -44,108 +44,130 @@
 	     
     <a id="thanks"></a>
 	<div id="thanksbg"></div>
+	
+	
+	<button class="btn-sound" data-sound="mp3/hi-col.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">hi col</p> </button>
+<button class="btn-sound" data-sound="mp3/ciao-and-bella-fragmatalatatata.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ciao and bella fragmatalatatata</p> </button>
+<button class="btn-sound" data-sound="mp3/you-are-as-always-an-abandoned-halibut.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you are as always an abandoned halibut</p> </button>
+<button class="btn-sound" data-sound="mp3/you-got-that-boy.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you got that boy</p> </button>
+<button class="btn-sound" data-sound="mp3/have-a-mind-tumble-but-dont-empty-the-dryer.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">have a mind tumble but dont empty the dryer</p> </button>
+<button class="btn-sound" data-sound="mp3/reackons-your-ideas-are-on-the-damp-side-of-waerable.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">reackons your ideas are on the damp side of waerable</p> </button>
+<button class="btn-sound" data-sound="mp3/esepcially-when-he-hasnt-had-his-peanuts.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">esepcially when he hasnt had his peanuts</p> </button>
+<button class="btn-sound" data-sound="mp3/he-can-be-a-bastard.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">he can be a bastard</p> </button>
+<button class="btn-sound" data-sound="mp3/ya-ya-i-know-i-know.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ya ya i know i know</p> </button>
+<button class="btn-sound" data-sound="mp3/he-didnt-like...mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">he didnt like..</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah-the-geoff-linton.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the geoff linton</p> </button>
+<button class="btn-sound" data-sound="mp3/had-a-zoomerang-with-geoff-linton.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">had a zoomerang with geoff linton</p> </button>
+<button class="btn-sound" data-sound="mp3/aahj-ahaaahj-ahj-i-know.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">aahj ahaaahj ahj i know</p> </button>
+<button class="btn-sound" data-sound="mp3/you-should-have-got-a-side-order-of-belgian-lofls.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you should have got a side order of belgian lofls</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah-the-lord-of-londis.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the lord of londis</p> </button>
+<button class="btn-sound" data-sound="mp3/who-do-you-think-you-are-papa-rumpo.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">who do you think you are papa rumpo</p> </button>
+<button class="btn-sound" data-sound="mp3/with-your-boil-in-the-bag-cod-and-parsley-sauce.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">with your boil in the bag cod and parsley sauce</p> </button>
+<button class="btn-sound" data-sound="mp3/look-at-you-boi.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">look at you boi</p> </button>
+
+
 	<button class="btn-sound" data-sound="mp3/drums30.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/toast.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">30 seconds of Linton's drums</p>
 </button>
 	<button class="btn-sound" data-sound="mp3/cya-col-aairgghh.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Cya col aairgghh</p>
 </button>
 <button class="btn-sound" data-sound="mp3/bella-nugato.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Bella nougato</p>
 </button>
 <button class="btn-sound" data-sound="mp3/you-are-as-always-a-knackered-parrot.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">You are as always a knackered parrot</p>
 </button>
 <button class="btn-sound" data-sound="mp3/well-see-which-one-falls-out-first.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">We'll see which one falls out first</p>
 </button>
 <button class="btn-sound" data-sound="mp3/hoover-them-up.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Hoover them up</p>
 </button>
 <button class="btn-sound" data-sound="mp3/have-a-mind-grate-the-options.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Have a mind grate the options</p>
 </button>
 <button class="btn-sound" data-sound="mp3/aiya-ya-ya.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Aiya ya ya</p>
 </button>
 <button class="btn-sound" data-sound="mp3/yeah-i-know-its-the-linton.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Yeah I know it's the Linton</p>
 </button>
 <button class="btn-sound" data-sound="mp3/bobble-hats.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Bobble Hats</p>
 </button>
 <button class="btn-sound" data-sound="mp3/good-news-is.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Good news is</p>
 </button>
 <button class="btn-sound" data-sound="mp3/its-a-whole-mouthful-of-pigs-tits.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">It's a whole mouthful of pigs tits</p>
 </button>
 <button class="btn-sound" data-sound="mp3/hes-pulling-the-plug-on-the-pencil-cases.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">He's pulling the plug on the pencil cases</p>
 </button>
 <button class="btn-sound" data-sound="mp3/old-skool-with-linton.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Old skool with Linton</p>
 </button>
 <button class="btn-sound" data-sound="mp3/listen-some-bad-news.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Listen some bad news</p>
 </button>
 <button class="btn-sound" data-sound="mp3/hilario-with-a-rolf-on-top.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Hilario with a rolf on top</p>
 </button>
 <button class="btn-sound" data-sound="mp3/though-so-cuz-it-looks-like-shit.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Thought so cuz it looks like shit</p>
 </button>
 <button class="btn-sound" data-sound="mp3/what-is-it-a-number-2.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">What is it a number 2?</p>
 </button>
 <button class="btn-sound" data-sound="mp3/with-ya-lockdown-haircut.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">With ya lockdown haircut</p>
 </button>
 <button class="btn-sound" data-sound="mp3/look-at-you-boi.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Look at you boi</p>
 </button>
 <button class="btn-sound" data-sound="mp3/hi-col-yeaaaah.mp3">
-   <div class="rbn"><b>New</b></div>
+  
    <img src="img/tg.png" width="50" height="50" alt="Train Guy"> 
    <p class="soundname">Hi col yeaaaah</p>
 </button>
