--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div id="thanksbg"></div>
 	
 	
-	<button class="btn-sound" data-sound="mp3/hi-col.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">hi col</p> </button>
+	<button class="btn-sound" data-sound="mp3/hi-col 2.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">hi col</p> </button>
 <button class="btn-sound" data-sound="mp3/ciao-and-bella-fragmatalatatata.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ciao and bella fragmatalatatata</p> </button>
 <button class="btn-sound" data-sound="mp3/you-are-as-always-an-abandoned-halibut.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you are as always an abandoned halibut</p> </button>
 <button class="btn-sound" data-sound="mp3/you-got-that-boy.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you got that boy</p> </button>
@@ -63,7 +63,7 @@
 <button class="btn-sound" data-sound="mp3/yeah-the-lord-of-londis.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the lord of londis</p> </button>
 <button class="btn-sound" data-sound="mp3/who-do-you-think-you-are-papa-rumpo.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">who do you think you are papa rumpo</p> </button>
 <button class="btn-sound" data-sound="mp3/with-your-boil-in-the-bag-cod-and-parsley-sauce.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">with your boil in the bag cod and parsley sauce</p> </button>
-<button class="btn-sound" data-sound="mp3/look-at-you-boi.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">look at you boi</p> </button>
+<button class="btn-sound" data-sound="mp3/look-at-you-boi 2.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">look at you boi</p> </button>
 
 
 	<button class="btn-sound" data-sound="mp3/drums30.mp3">
