--- a/index.html
+++ b/index.html
@@ -44,26 +44,42 @@
 	     
     <a id="thanks"></a>
 	<div id="thanksbg"></div>
+	<button class="btn-sound" data-sound="mp3/hi%20mum.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>hi mum</p> </button>
+<button class="btn-sound" data-sound="mp3/look%20at%20you%20gal.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>look at you gal</p> </button>
+<button class="btn-sound" data-sound="mp3/with%20your%20oil%20of%20olay%20streaks.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>with your oil of olay streaks</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah%20and%20your%20grey%20hair.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>yeah and your grey hair</p> </button>
+<button class="btn-sound" data-sound="mp3/I%20thought%20my%20camera%20was%20on%20black%20and%20white.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>I thought my camera was on black and white</p> </button>
+<button class="btn-sound" data-sound="mp3/it's%20like%20a%20rofl%20brothel%20in%20here.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>it's like a rofl brothel in here</p> </button>
+<button class="btn-sound" data-sound="mp3/listen%20i've%20got%20some%20bad%20news.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>listen i've got some bad news</p> </button>
+<button class="btn-sound" data-sound="mp3/i've%20been%20in%20a%20zoom%20booth%20with%20geoff%20linton.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>i've been in a zoom booth with geoff linton</p> </button>
+<button class="btn-sound" data-sound="mp3/the%20bobble%20hat%20project.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>the bobble hat project</p> </button>
+<button class="btn-sound" data-sound="mp3/wont%20be%20able%20to%20come%20this%20weekend.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>wont be able to come this weekend</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah%20terribly%20sad.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>yeah terribly sad</p> </button>
+<button class="btn-sound" data-sound="mp3/sad%20like%20when%20a%20heron%20dies.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>sad like when a heron dies</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah%20i%20know%20i%20know%20i%20know%20i%20know.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>yeah i know i know i know i know</p> </button>
+<button class="btn-sound" data-sound="mp3/you%20are%20as%20always%20a%20viable%20option.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>you are as always a viable option</p> </button>
+<button class="btn-sound" data-sound="mp3/ciao%20and%20bella%20fragmento.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>ciao and bella fragmento</p> </button>
+<button class="btn-sound" data-sound="mp3/cya%20mum.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p>cya mum</p> </button>
+<button class="btn-sound" data-sound="mp3/ggghhhhh.mp3"> <div class="rbn"><b>New</b></div> <img src="img/chew.png" width="50" height="50" alt="Train Guy"> <p>ggghhhhh</p> </button>
 	
-	
-	<button class="btn-sound" data-sound="mp3/hi-col 2.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">hi col</p> </button>
-<button class="btn-sound" data-sound="mp3/ciao-and-bella-fragmatalatatata.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ciao and bella fragmatalatatata</p> </button>
-<button class="btn-sound" data-sound="mp3/you-are-as-always-an-abandoned-halibut.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you are as always an abandoned halibut</p> </button>
-<button class="btn-sound" data-sound="mp3/you-got-that-boy.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you got that boy</p> </button>
-<button class="btn-sound" data-sound="mp3/have-a-mind-tumble-but-dont-empty-the-dryer.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">have a mind tumble but dont empty the dryer</p> </button>
-<button class="btn-sound" data-sound="mp3/reackons-your-ideas-are-on-the-damp-side-of-waerable.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">reackons your ideas are on the damp side of waerable</p> </button>
-<button class="btn-sound" data-sound="mp3/esepcially-when-he-hasnt-had-his-peanuts.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">esepcially when he hasnt had his peanuts</p> </button>
-<button class="btn-sound" data-sound="mp3/he-can-be-a-bastard.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">he can be a bastard</p> </button>
-<button class="btn-sound" data-sound="mp3/ya-ya-i-know-i-know.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ya ya i know i know</p> </button>
-<button class="btn-sound" data-sound="mp3/he-didnt-like...mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">he didnt like..</p> </button>
-<button class="btn-sound" data-sound="mp3/yeah-the-geoff-linton.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the geoff linton</p> </button>
-<button class="btn-sound" data-sound="mp3/had-a-zoomerang-with-geoff-linton.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">had a zoomerang with geoff linton</p> </button>
-<button class="btn-sound" data-sound="mp3/aahj-ahaaahj-ahj-i-know.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">aahj ahaaahj ahj i know</p> </button>
-<button class="btn-sound" data-sound="mp3/you-should-have-got-a-side-order-of-belgian-lofls.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you should have got a side order of belgian lofls</p> </button>
-<button class="btn-sound" data-sound="mp3/yeah-the-lord-of-londis.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the lord of londis</p> </button>
-<button class="btn-sound" data-sound="mp3/who-do-you-think-you-are-papa-rumpo.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">who do you think you are papa rumpo</p> </button>
-<button class="btn-sound" data-sound="mp3/with-your-boil-in-the-bag-cod-and-parsley-sauce.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">with your boil in the bag cod and parsley sauce</p> </button>
-<button class="btn-sound" data-sound="mp3/look-at-you-boi 2.mp3"> <div class="rbn"><b>New</b></div> <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">look at you boi</p> </button>
+	<button class="btn-sound" data-sound="mp3/hi-col 2.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">hi col</p> </button>
+<button class="btn-sound" data-sound="mp3/ciao-and-bella-fragmatalatatata.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ciao and bella fragmatalatatata</p> </button>
+<button class="btn-sound" data-sound="mp3/you-are-as-always-an-abandoned-halibut.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you are as always an abandoned halibut</p> </button>
+<button class="btn-sound" data-sound="mp3/you-got-that-boy.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you got that boy</p> </button>
+<button class="btn-sound" data-sound="mp3/have-a-mind-tumble-but-dont-empty-the-dryer.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">have a mind tumble but dont empty the dryer</p> </button>
+<button class="btn-sound" data-sound="mp3/reackons-your-ideas-are-on-the-damp-side-of-waerable.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">reackons your ideas are on the damp side of waerable</p> </button>
+<button class="btn-sound" data-sound="mp3/esepcially-when-he-hasnt-had-his-peanuts.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">esepcially when he hasnt had his peanuts</p> </button>
+<button class="btn-sound" data-sound="mp3/he-can-be-a-bastard.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">he can be a bastard</p> </button>
+<button class="btn-sound" data-sound="mp3/ya-ya-i-know-i-know.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">ya ya i know i know</p> </button>
+<button class="btn-sound" data-sound="mp3/he-didnt-like...mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">he didnt like..</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah-the-geoff-linton.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the geoff linton</p> </button>
+<button class="btn-sound" data-sound="mp3/had-a-zoomerang-with-geoff-linton.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">had a zoomerang with geoff linton</p> </button>
+<button class="btn-sound" data-sound="mp3/aahj-ahaaahj-ahj-i-know.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">aahj ahaaahj ahj i know</p> </button>
+<button class="btn-sound" data-sound="mp3/you-should-have-got-a-side-order-of-belgian-lofls.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">you should have got a side order of belgian lofls</p> </button>
+<button class="btn-sound" data-sound="mp3/yeah-the-lord-of-londis.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">yeah the lord of londis</p> </button>
+<button class="btn-sound" data-sound="mp3/who-do-you-think-you-are-papa-rumpo.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">who do you think you are papa rumpo</p> </button>
+<button class="btn-sound" data-sound="mp3/with-your-boil-in-the-bag-cod-and-parsley-sauce.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">with your boil in the bag cod and parsley sauce</p> </button>
+<button class="btn-sound" data-sound="mp3/look-at-you-boi 2.mp3">   <img src="img/tg.png" width="50" height="50" alt="Train Guy"> <p class="soundname">look at you boi</p> </button>
 
 
 	<button class="btn-sound" data-sound="mp3/drums30.mp3">
